# cdy_agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.superpowers/sdd/: final-fix-report.md  final-fixes-report.md  task-6-report.md
docs/: SKILL调用时序图.md
docs/superpowers/plans/: 2026-07-15-engineering-skeleton.md  2026-07-16-dual-api-mode.md  2026-07-16-repository-guidelines-lockfile.md  2026-07-16-single-response-api-call.md  2026-07-18-local-tools-agent-loop.md  2026-07-18-multi-turn-conversation.md  2026-07-18-notes-todos-tools.md  2026-07-18-persistent-conversations.md  2026-07-18-workspace-skills-system.md  2026-07-19-long-term-memory.md  2026-07-20-observability.md  2026-07-22-streaming-and-evals.md  2026-07-22-streaming-tool-calls.md  (+1 more)
skills/summarize/: SKILL.md
src/cdy_agent/: __init__.py  agent.py  cli.py  config.py  conversation.py  evals.py  models.py  openai_client.py  openai_sdk.py  skill_registry.py  skills.py
tests/: test_agent.py  test_cli.py  test_config.py  test_conversation.py  test_conversation_store.py  test_evals.py  test_filesystem_and_shell_skills.py  test_filesystem_tools.py  test_memory_database.py  test_memory_store.py  test_memory_tools.py  test_note_tools.py  test_observability_logging.py  test_observability_models.py  test_observability_pricing.py  test_openai_client.py  test_personal_store.py  test_shell_tool.py  test_skill_loader.py  test_skill_manager.py  test_skill_registry.py  test_skill_tools.py  test_skills.py  test_todo_tools.py  test_tool_registry.py  test_trace_recorder.py  test_trace_store.py
(+48 files in other folders)
