[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cdy-agent"
version = "0.1.0"
description = "A small OpenAI Python SDK based personal AI agent with local skill support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.99.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
cdy-agent = "cdy_agent.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
